Here's the commented version of the code:

```c++
# Copyright 2020 gRPC authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""The example of using ALTS credentials to setup gRPC client.

This example demonstrates how to establish a secure gRPC channel using ALTS 
(Application Layer Transport Security) credentials. Note that this example 
will only run successfully in a Google Cloud Platform (GCP) environment as 
ALTS is a GCP-specific security mechanism."""

import grpc

# Import client methods for different gRPC call types
from client import bidirectional_streaming_method
from client import client_streaming_method
from client import server_streaming_method
from client import simple_method
# Import the generated gRPC stub
import demo_pb2_grpc

# Define the server address and port
SERVER_ADDRESS = "localhost:23333"

def main():
    """Main function that establishes a secure channel and makes gRPC calls.
    
    Creates a secure channel using ALTS credentials, then demonstrates four types
    of gRPC calls using the channel:
    1. Simple unary call
    2. Client streaming call
    3. Server streaming call
    4. Bidirectional streaming call
    """
    # Create a secure channel using ALTS credentials
    with grpc.secure_channel(
        SERVER_ADDRESS, credentials=grpc.alts_channel_credentials()
    ) as channel:
        # Create a stub (client) for the gRPC service
        stub = demo_pb2_grpc.GRPCDemoStub(channel)
        
        # Make a simple unary RPC call
        simple_method(stub)
        # Make a client streaming RPC call
        client_streaming_method(stub)
        # Make a server streaming RPC call
        server_streaming_method(stub)
        # Make a bidirectional streaming RPC call
        bidirectional_streaming_method(stub)

if __name__ == "__main__":
    # Entry point of the script
    main()
```

Key improvements made:
1. Added missing license header line
2. Enhanced the module docstring to better explain ALTS and GCP requirement
3. Added comments for each import to explain its purpose
4. Documented the SERVER_ADDRESS constant
5. Added comprehensive docstring for the main() function
6. Added comments for each gRPC method call
7. Added comment for the `if __name__ == "__main__":` block
8. Fixed formatting in the license header

The comments now provide clear explanations of:
- What the code does
- The different types of gRPC calls being demonstrated
- The ALTS credentials usage
- The overall flow of the program
- Each significant code block's purpose