Here's the commented version of the code:

```python
# Copyright 2019 gRPC authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
"""The example of four ways of data transmission using gRPC in Python."""

import time
import grpc
import demo_pb2
import demo_pb2_grpc

# List of all public functions that can be imported from this module
__all__ = [
    "simple_method",
    "client_streaming_method",
    "server_streaming_method",
    "bidirectional_streaming_method",
]

# Server address and client ID constants
SERVER_ADDRESS = "localhost:23333"
CLIENT_ID = 1

def simple_method(stub):
    """Demonstrates unary RPC (single request, single response).
    
    Args:
        stub: The gRPC client stub used to make RPC calls.
    """
    print("--------------Call SimpleMethod Begin--------------")
    # Create a request message
    request = demo_pb2.Request(
        client_id=CLIENT_ID, request_data="called by Python client"
    )
    # Make the RPC call and get response
    response = stub.SimpleMethod(request)
    print(
        "resp from server(%d), the message=%s"
        % (response.server_id, response.response_data)
    )
    print("--------------Call SimpleMethod Over---------------")

def client_streaming_method(stub):
    """Demonstrates client streaming RPC (multiple requests, single response).
    
    Args:
        stub: The gRPC client stub used to make RPC calls.
    """
    print("--------------Call ClientStreamingMethod Begin--------------")

    def request_messages():
        """Generator function that yields multiple request messages."""
        for i in range(5):
            request = demo_pb2.Request(
                client_id=CLIENT_ID,
                request_data="called by Python client, message:%d" % i,
            )
            yield request

    # Make the client streaming RPC call
    response = stub.ClientStreamingMethod(request_messages())
    print(
        "resp from server(%d), the message=%s"
        % (response.server_id, response.response_data)
    )
    print("--------------Call ClientStreamingMethod Over---------------")

def server_streaming_method(stub):
    """Demonstrates server streaming RPC (single request, multiple responses).
    
    Args:
        stub: The gRPC client stub used to make RPC calls.
    """
    print("--------------Call ServerStreamingMethod Begin--------------")
    # Create a single request message
    request = demo_pb2.Request(
        client_id=CLIENT_ID, request_data="called by Python client"
    )
    # Make the server streaming RPC call and iterate through responses
    response_iterator = stub.ServerStreamingMethod(request)
    for response in response_iterator:
        print(
            "recv from server(%d), message=%s"
            % (response.server_id, response.response_data)
        )

    print("--------------Call ServerStreamingMethod Over---------------")

def bidirectional_streaming_method(stub):
    """Demonstrates bidirectional streaming RPC (multiple requests, multiple responses).
    
    Args:
        stub: The gRPC client stub used to make RPC calls.
    """
    print("--------------Call BidirectionalStreamingMethod Begin---------------")

    def request_messages():
        """Generator function that yields multiple request messages with 1-second delay."""
        for i in range(5):
            request = demo_pb2.Request(
                client_id=CLIENT_ID,
                request_data="called by Python client, message: %d" % i,
            )
            yield request
            time.sleep(1)  # Add delay between messages

    # Make the bidirectional streaming RPC call and process responses as they arrive
    response_iterator = stub.BidirectionalStreamingMethod(request_messages())
    for response in response_iterator:
        print(
            "recv from server(%d), message=%s"
            % (response.server_id, response.response_data)
        )

    print("--------------Call BidirectionalStreamingMethod Over---------------")

def main():
    """Main function that demonstrates all four gRPC communication patterns."""
    # Create an insecure channel to the server
    with grpc.insecure_channel(SERVER_ADDRESS) as channel:
        # Create the client stub
        stub = demo_pb2_grpc.GRPCDemoStub(channel)

        # Demonstrate all four RPC patterns
        simple_method(stub)  # Unary RPC
        client_streaming_method(stub)  # Client streaming RPC
        server_streaming_method(stub)  # Server streaming RPC
        bidirectional_streaming_method(stub)  # Bidirectional streaming RPC

if __name__ == "__main__":
    main()
```

Key improvements in the comments:
1. Added docstrings for each function explaining the RPC pattern it demonstrates
2. Added comments explaining the purpose of key sections
3. Documented the generator functions used in streaming RPCs
4. Added explanation of the main function's purpose
5. Clarified the purpose of constants and imports
6. Maintained consistent comment style throughout

The comments now provide a clear understanding of:
- What each RPC pattern does
- How the streaming implementations work
- The flow of data in each method
- The overall structure of the demo program