Here's the commented version of the code:

```c++
# Copyright 2019 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.
"""The example of four ways of data transmission using gRPC in Python."""

from concurrent import futures
from threading import Thread

import grpc

import demo_pb2
import demo_pb2_grpc

# Define module exports and server configuration constants
__all__ = "DemoServer"
SERVER_ADDRESS = "localhost:23333"  # Server address and port
SERVER_ID = 1  # Identifier for this server instance

class DemoServer(demo_pb2_grpc.GRPCDemoServicer):
    """Implementation of gRPC demo service showcasing four communication patterns."""

    def SimpleMethod(self, request, context):
        """Unary RPC: single request from client, single response from server."""
        print(
            "SimpleMethod called by client(%d) the message: %s"
            % (request.client_id, request.request_data)
        )
        # Create and return a single response
        response = demo_pb2.Response(
            server_id=SERVER_ID,
            response_data="Python server SimpleMethod Ok!!!!",
        )
        return response

    def ClientStreamingMethod(self, request_iterator, context):
        """Client streaming RPC: client sends sequence of messages, server responds once."""
        print("ClientStreamingMethod called by client...")
        # Process each message in the client's stream
        for request in request_iterator:
            print(
                "recv from client(%d), message= %s"
                % (request.client_id, request.request_data)
            )
        # Return single response after processing all client messages
        response = demo_pb2.Response(
            server_id=SERVER_ID,
            response_data="Python server ClientStreamingMethod ok",
        )
        return response

    def ServerStreamingMethod(self, request, context):
        """Server streaming RPC: single client request, sequence of server responses."""
        print(
            "ServerStreamingMethod called by client(%d), message= %s"
            % (request.client_id, request.request_data)
        )

        def response_messages():
            """Generator function yielding multiple response messages."""
            for i in range(5):
                response = demo_pb2.Response(
                    server_id=SERVER_ID,
                    response_data="send by Python server, message=%d" % i,
                )
                yield response

        return response_messages()

    def BidirectionalStreamingMethod(self, request_iterator, context):
        """Bidirectional streaming RPC: both sides send sequence of messages."""
        print("BidirectionalStreamingMethod called by client...")

        def parse_request():
            """Thread function to process incoming client messages."""
            for request in request_iterator:
                print(
                    "recv from client(%d), message= %s"
                    % (request.client_id, request.request_data)
                )

        # Start a thread to handle incoming messages while we send responses
        t = Thread(target=parse_request)
        t.start()

        # Send a sequence of responses while request thread runs
        for i in range(5):
            yield demo_pb2.Response(
                server_id=SERVER_ID,
                response_data="send by Python server, message= %d" % i,
            )

        # Wait for request processing thread to complete
        t.join()

def main():
    """Main function to configure and start the gRPC server."""
    # Create server with thread pool executor
    server = grpc.server(futures.ThreadPoolExecutor())

    # Register our service implementation with the server
    demo_pb2_grpc.add_GRPCDemoServicer_to_server(DemoServer(), server)

    # Bind server to address and start serving
    server.add_insecure_port(SERVER_ADDRESS)
    print("------------------start Python GRPC server")
    server.start()
    server.wait_for_termination()  # Block until server is terminated

if __name__ == "__main__":
    main()
```

Key improvements in the comments:
1. Added class-level docstring explaining the service's purpose
2. Added detailed method docstrings explaining each gRPC communication pattern
3. Added comments explaining important implementation details
4. Documented the main() function's purpose and flow
5. Added comments for helper functions/nested functions
6. Explained the purpose of constants and module exports
7. Maintained the existing license header and file docstring

The comments now provide a clear understanding of:
- The four gRPC communication patterns being demonstrated
- The flow of data in each method
- Threading usage in bidirectional streaming
- Server configuration and startup process